# brk-code-local

./: .gitignore  LICENSE  README.md  pyproject.toml  report.html  tasks.jsonl
.github/workflows/: ci.yml
brk_code/: __init__.py  __main__.py  ast_analyzer.py  checksum.py  cli.py  constants.py  container.py  dependency.py  errors.py  html_report.py  jsonl_export.py  learning_tasks.py  scanner.py  security.py  sparse_source_residual.py  sqlite_export.py  util.py
examples/sample_project/: app.py  test_app.py  utils.py
specs/: BRK-Code-Python-v0.1.md
tests/: test_ast_analyzer.py  test_cli.py  test_container.py  test_learning_tasks.py  test_security.py
